Fix: Button being too close to icon

--- a/static/style.css
+++ b/static/style.css
@@ -374,7 +374,7 @@ div .box{
 }
 
 button {
-	margin: 4px 0;
+	margin: 4px 2px;
 	width: fit-content;
 	height: 50px;
 	font-size: 18px;
